// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearRefinements() with refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 1`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  cssClasses={
    Object {
      "body": "ais-clear-all--body",
      "footer": "ais-clear-all--footer",
      "header": "ais-clear-all--header",
      "link": "ais-clear-all--link",
      "root": "ais-clear-all root cx",
    }
  }
  hasRefinements={true}
  refine={[Function]}
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "link": "Clear all",
      },
      "templatesConfig": Object {},
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "link": false,
      },
    }
  }
  url="#all-cleared"
/>
`;

exports[`clearRefinements() with refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 2`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  cssClasses={
    Object {
      "body": "ais-clear-all--body",
      "footer": "ais-clear-all--footer",
      "header": "ais-clear-all--header",
      "link": "ais-clear-all--link",
      "root": "ais-clear-all root cx",
    }
  }
  hasRefinements={true}
  refine={[Function]}
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "link": "Clear all",
      },
      "templatesConfig": Object {},
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "link": false,
      },
    }
  }
  url="#all-cleared"
/>
`;

exports[`clearRefinements() without refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 1`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  cssClasses={
    Object {
      "body": "ais-clear-all--body",
      "footer": "ais-clear-all--footer",
      "header": "ais-clear-all--header",
      "link": "ais-clear-all--link",
      "root": "ais-clear-all root cx",
    }
  }
  hasRefinements={false}
  refine={[Function]}
  shouldAutoHideContainer={true}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "link": "Clear all",
      },
      "templatesConfig": Object {},
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "link": false,
      },
    }
  }
  url="#all-cleared"
/>
`;

exports[`clearRefinements() without refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 2`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  cssClasses={
    Object {
      "body": "ais-clear-all--body",
      "footer": "ais-clear-all--footer",
      "header": "ais-clear-all--header",
      "link": "ais-clear-all--link",
      "root": "ais-clear-all root cx",
    }
  }
  hasRefinements={false}
  refine={[Function]}
  shouldAutoHideContainer={true}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "link": "Clear all",
      },
      "templatesConfig": Object {},
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "link": false,
      },
    }
  }
  url="#all-cleared"
/>
`;
